tests/baselines/reference/invalidImportAliasIdentifiers.errors.txt
invalidImportAliasIdentifiers.ts(5,12): error TS2503: Cannot find namespace 'V'.
invalidImportAliasIdentifiers.ts(11,12): error TS2702: 'C' only refers to a type, but is being used as a namespace here.
invalidImportAliasIdentifiers.ts(23,12): error TS2702: 'I' only refers to a type, but is being used as a namespace here.


==== invalidImportAliasIdentifiers.ts (3 errors) ====
    // none of these should work, since non are actually modules
    
    var V = 12;
    
    import v = V;
               ~
!!! error TS2503: Cannot find namespace 'V'.
    
    class C {
        name: string;
    }
    
    import c = C;
               ~
!!! error TS2702: 'C' only refers to a type, but is being used as a namespace here.
    
    enum E {
        Red, Blue
    }
    
    import e = E;
    
    interface I {
        id: number;
    }
    
    import i = I;
               ~
!!! error TS2702: 'I' only refers to a type, but is being used as a namespace here.
    